# docs/swagger.yaml
@@ -1,22 +1,3 @@
-definitions:
-  video.PublishActionRequest:
-    properties:
-      data:
-        items:
-          type: integer
-        type: array
-      title:
-        type: string
-      user_id:
-        type: integer
-    type: object
-  video.PublishListRequest:
-    properties:
-      token:
-        type: string
-      user_id:
-        type: integer
-    type: object
 info:
   contact: {}
 paths:
@@ -122,7 +103,6 @@ paths:
       - description: 可选参数，限制返回视频的最新投稿时间戳，精确到秒，不填表示当前时间
         in: query
         name: latest_time
-        required: true
         type: integer
       - description: 用户鉴权token
         in: query
@@ -193,12 +173,26 @@ paths:
       - application/json
       description: 视频投稿
       parameters:
-      - description: body
-        in: body
+      - description: file
+        in: formData
+        name: data
+        required: true
+        type: file
+      - description: title
+        in: formData
+        name: title
+        required: true
+        type: string
+      - description: user_id
+        in: query
+        name: user_id
+        required: true
+        type: string
+      - description: token
+        in: query
         name: token
         required: true
-        schema:
-          $ref: '#/definitions/video.PublishActionRequest'
+        type: string
       produces:
       - application/json
       responses: {}
@@ -210,12 +204,12 @@ paths:
       - application/json
       description: 获取用户发表的视频列表
       parameters:
-      - description: body
-        in: body
+      - in: query
         name: token
-        required: true
-        schema:
-          $ref: '#/definitions/video.PublishListRequest'
+        type: string
+      - in: query
+        name: user_id
+        type: integer
       produces:
       - application/json
       responses: {}
